--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/roundgrad"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -70,6 +71,7 @@
                     <TextView
                         android:layout_width="170dp"
                         android:layout_height="50dp"
+
                         android:layout_marginTop="40dp"
                         android:layout_marginStart="120dp"
                         android:textColor="@color/black"
